# Omnia-SDB

./: .gitignore  CMakeLists.txt  README.md  run-cmake
extra/: newDB.sdb  run-frontend.sh  stressTest.sdb  tilesDB.sdb
frontend-test/: main.cpp  tile.cpp  tile.h
src/: database.cpp  reader.cpp  types.cpp  writer.cpp
src/sdb/: database.h  reader.h  sdb.h  types.h  writer.h
